<resources>
    <string name="app_name">Kullow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">KU:llow</string>
    <string name="nav_header_subtitle">Welcome to Konkuk Univ.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">KU:llow</string>
    <string name="menu_navigation">KU:길찾기</string>
    <string name="menu_building">KU:건물안내</string>
    <string name="menu_sign">KU:표지판안내</string>
    <string name="menu_goose">KU:거위찾기</string>


    <string name="instruct_relocalize">Point camera to previous position to restore tracking</string>
    <string name="INIT_ERROR">Error</string>
    <string name="button_OK">OK</string>
    <string name="INIT_ERROR_DEVICE_NOT_SUPPORTED">Failed to initialize Vuforia Engine. This device is not supported.</string>
    <string name="INIT_ERROR_NO_CAMERA_ACCESS">Failed to initialize Vuforia Engine. Camera not accessible</string>
    <string name="INIT_ERROR_TRACKERS_NOT_INITIALIZED">This device may not be supported. For a list of supported devices please see https://library.vuforia.com/articles/Solution/ground-plane-supported-devices.html</string>
    <string name="INIT_LICENSE_ERROR_MISSING_KEY">Vuforia Engine App key is missing. Please get a valid key, by logging into your account at developer.vuforia.com and creating a new project.</string>
    <string name="INIT_LICENSE_ERROR_INVALID_KEY">Invalid Key used. Please make sure you are using a valid Vuforia Engine App Key.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_TRANSIENT">Unable to contact server. Please try again later.</string>
    <string name="INIT_LICENSE_ERROR_NO_NETWORK_PERMANENT">No network available. Please make sure you are connected to the Internet.</string>
    <string name="INIT_LICENSE_ERROR_CANCELED_KEY">This app license key has been canceled and may no longer be used. Please get a new license key.</string>
    <string name="INIT_LICENSE_ERROR_PRODUCT_TYPE_MISMATCH">Vuforia Engine App key is not valid for this product. Please get a valid key, by logging into your account at developer.vuforia.com and choosing the right product type during project creation.</string>
    <string name="INIT_LICENSE_ERROR_UNKNOWN_ERROR">Failed to initialize Vuforia Engine.</string>
    <string name="INIT_OBJECT_DATASET_NOT_FOUND_TITLE">Database not found</string>
    <string name="INIT_OBJECT_DATASET_NOT_FOUND">Please scan an object and load a database</string>

</resources>
